Alignment Bug Fix 2

--- a/assets/presentation/index.css
+++ b/assets/presentation/index.css
@@ -171,15 +171,23 @@ span.highligher {
 
 /** General ***/
 
+nav.titlebar {
+
+    width: 100%;
+    height: 85px;
+    margin-bottom: 20px;
+    background-color: var(--blueishDark);
+
+}
+
 div#narrative-tree {
 
-    position: absolute;
     display: flex;
-    height: 80%;
-    width: 98%;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    height: 600px;
+    max-width: 1400px;
+    min-width: 1105px;
+    padding: 50px;
+    margin: 0px auto;
 }
 
 div#narrative-tree div.column {
